# deploy

./: README.md  demo_service.service  deploy.py  pyproject.toml  test.py
