[project]
name = "deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "toml>=0.10.2",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "fabric>=3.2.2",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.3",
    "requests>=2.32.3",
]


[tool.deploy]
host = "bourne"
dir = "/tmp/apps"
app_name = "demo_service"
host_uv_path = "/home/goran/.cargo/bin/uv"
ignore_list = [
    "devenv.*",
    "README.md",
    ".envrc",
    "data",
    ".venv",
    ".direnv",
    ".devenv",
]
